fix for the scrollbar in the docs sidebar

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_documentation.scss
@@ -64,15 +64,14 @@
     }
 
     &::-webkit-scrollbar {
-      display: none;
-    }
-
-    &::-webkit-scrollbar {
       width: 1px;
     }
 
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
     &::-webkit-scrollbar-thumb {
-      background: var(--brand-gray);
+      background: transparent;
     }
 
     &:hover {
@@ -82,14 +81,18 @@
       &::-webkit-scrollbar {
         display: block;
       }
+
+      &::-webkit-scrollbar-thumb {
+        background: var(--brand-gray);
+      }
     }
 
     @media (hover: none) {
       scrollbar-width: thin; /* Firefox */
       scrollbar-color: var(--brand-gray) var(--brand-mid-grey) !important;
 
-      &::-webkit-scrollbar {
-        display: block;
+      &::-webkit-scrollbar-thumb {
+        background: var(--brand-gray);
       }
     }
   }
